Changes since last push:
 - Removed redundant information in storing the amount of light in a tile. Also
made it easier to change the light with time of day.

Known "features":
 - The strenth of gravity is independent of the world.
 - Things that move multiple tiles per second won't collide as if they were moving in a straight line. The best way to solve this may be to not allow anything to move that fast, possibly via multiple updates between renderings.
 - The spawn point sometimes puts the player on top of dirt. Spawning should be changed so it destroys any tiles in the way.

Known bugs:
 - Apparently the player can fit in gaps that they can't escape.

Soon to come (though likely not very soon):
 - More types of tiles
 - Trees!
 - Better map generation
 - Instead of storing the health of every single tile on the map, I should just have a list of the ones that have been damaged.
 - hud
 - inventory
 - actual support for platforms
TODO:
 - make the hotbar frames into a spritesheet
 - Replace SDL_Texture* with void* in things that don't need to know about SDL?
 - Make the spaceInfo class just store a tiletype, not a Tile*, and use it as
the index of the Tile*
